# FreeRTOS-CMake

./: CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
